@@ -1,3 +1,8 @@
+2012-09-17  Romain Lenglet  <romain.lenglet@berabera.info>
+
+	* src/agilezen.py, src/omnifocus2agilezen.py: Keep completed tasks
+	in AgileZen, and synchronize task statuses both ways.
+
 2012-09-12  Romain Lenglet  <romain.lenglet@berabera.info>
 
 	* src/agilezen.py, src/omnifocus2agilezen.py: Replace asserts with
